--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.90.1",
     "@types/leaflet": "^1.9.21",
     "chart.js": "^4.5.1",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
