feat: Implement Google Ad Manager integration with OAuth2 authentication and report generation
- Added gamAuth.ts for Google Ad Manager OAuth2 service account authentication using JWT.
- Created index.ts for handling SOAP requests to Google Ad Manager API for report generation.
- Developed AdReports.tsx component for displaying ad report data with charts and summary cards.
- Implemented date range selection and error handling for fetching reports.
- Added utility functions for formatting numbers and currencies.

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,7 @@ vite.config.ts.timestamp-*
 .vscode
 .github
 _bmad
+product/divee-485614-fcb2cdc01ae2 (1).json
+product/gam-service-account-base64.txt
+product/soap=ads-config.ini
+product/ads.php
